# Device-Fleet-Management

./: .gitignore  QUICKSTART.md  README.md
backend/: CMakeLists.txt  build.sh
backend/src/: device_management_service_impl.cpp  device_management_service_impl.h  device_manager.cpp  device_manager.h  server.cpp
cli/:  setup.sh  device_cli.py  generate_grpc_code.sh  requirements.txt
proto/: device_management.proto
